LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Access__c/VENDOR_Access__c.object-meta.xml
<CustomObject>
    <description>Vendor Access records represent the time-bound access which Vendor Contacts have to either a system or physical assets, such as the office. Vendor Access records should be regularly reviewed and, when appropriate, closed.</description>
    <label>Vendor Access</label>
    <nameField>
        <label>Vendor Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>