LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Access__c/fields/Access_Point__c.field-meta.xml
<CustomField>
    <fullName>Access_Point__c</fullName>
    <description>2020-04-03 - N. Ehrmannn - MANUAL - The point of access, such as &quot;LA Office&quot;, or &quot;Salesforce&quot;.</description>
    <inlineHelpText>The point of access, such as &quot;LA Office&quot;, or &quot;Salesforce&quot;.</inlineHelpText>
    <label>Access Point</label>
    <length>100</length>
    <type>Text</type>
</CustomField>