LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Access__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The Vendor Contact for this access.</description>
    <label>Contact</label>
    <referenceTo>VENDOR_Contact__c</referenceTo>
    <relationshipLabel>Access</relationshipLabel>
    <relationshipName>Access</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>