LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Access__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - Notes regarding this access.</description>
    <label>Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>