LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Access__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The start date of the access.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>