LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Access__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - &quot;Physical&quot; means access to a physical asset, such as an office. &quot;Systems&quot; means access to a system, such as Salesforce.</description>
    <inlineHelpText>&quot;Physical&quot; means access to a physical asset, such as an office. &quot;Systems&quot; means access to a system, such as Salesforce.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>